# OperatingSystemsV2

./: .gitignore  CMakeLists.txt
include/OperatingSystems/: OperatingSystems.h
include/OperatingSystems/Algorithms/FrameAllocation/: Algorithm.h  Equal.h  ErrorsControlling.h  Proportional.h  WorkingSet.h
include/OperatingSystems/Algorithms/PageReplacement/: Algorithm.h  LRU.h
include/OperatingSystems/Processor/: Call.h  ErrorCounter.h  Frame.h  Page.h  Process.h  Processor.h
include/OperatingSystems/Simulator/: CallsGenerator.h  Main.cpp  PagesGenerator.h  ProcessWrapper.h  ProcessorInfo.h
src/Algorithms/FrameAllocation/: Algorithm.cpp  Equal.cpp  ErrorsControlling.cpp  Proportional.cpp  WorkingSet.cpp
src/Algorithms/PageReplacement/: Algorithm.cpp  LRU.cpp
src/Processor/: Frame.cpp  Page.cpp  Process.cpp  Processor.cpp
src/Simulator/: CallsGenerator.cpp  PagesGenerator.cpp  ProcessWrapper.cpp  ProcessorInfo.cpp
